version 2014-09-27
      Correct error reporting

version 2014-09-26
      Pull Request #1, strict warnings

version 2014-09-25
      Add regexp matching for email address and text attributes

version 2014-09-24
      Initial release to GitHub