@@ -75,6 +75,7 @@ This plugin is free but if you install and find it useful then a donation to sup
 ## Version history ##
 
     version     Description
+    2014-10-03  Add any/all, multi-value for select list and radio button attributes
     2014-09-27  Correct error reporting
     2014-09-26  Pull Request #1
     2014-09-25  Add regexp matching
